// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full spec of api should be provided 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: \\"2.1\\"
orbs:
  hello: world:2.0
workflows:
  workflow1:
    jobs:
      - job1:
          name: renamedJob2
          triggers:
            - schedule:
                cron: 0 0 * * *
                filters:
                  branches:
                    only:
                      - main
                      - beta
  workflow3:
    jobs:
      - job3:
          context:
            - context3
"
`;

exports[`orb with the same id can not be added 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: \\"2.1\\"
orbs:
  hello: world:2.0
workflows:
  workflow1-hello:
    jobs:
      - job1:
          name: renamedJob2
          triggers:
            - schedule:
                cron: 0 0 * * *
                filters:
                  branches:
                    only:
                      - main
                      - beta
"
`;
